# Volt_XA

./: .gitignore  CLAUDE.md  README.md  convert.js  package-lock.json
Plan/: Volt_XA.md  Volt_XA_KOR.md
Plan/Diagrams/: architecture-diagram.md  architecture-diagram_KOR.md  layer-0-external-world.md  layer-0-external-world_KOR.md  layer-1-input-translators.md  layer-1-input-translators_KOR.md  layer-10-socket-standard.md  layer-10-socket-standard_KOR.md  layer-2-tensor-frame-bus.md  layer-2-tensor-frame-bus_KOR.md  layer-3-gpu-soft-core.md  layer-3-gpu-soft-core_KOR.md  layer-4-cpu-hard-core.md  layer-4-cpu-hard-core_KOR.md  layer-5-voltdb.md  layer-5-voltdb_KOR.md  layer-6-output-action-cores.md  layer-6-output-action-cores_KOR.md  layer-7-continual-learning.md  layer-7-continual-learning_KOR.md  layer-8-intelligence-commons.md  layer-8-intelligence-commons_KOR.md  layer-9-ui-test-bench.md  layer-9-ui-test-bench_KOR.md  volt-xa-complete-architecture.md  volt-xa-complete-architecture_KOR.md
Visualization/: index.html  package-lock.json  package.json
Visualization/src/: config.js  main.js
Visualization/src/animation/: ConvergenceVisualizer.js  FlowPaths.js  ParticleSystem.js  PipelineAnimator.js  RARLoopAnimator.js
Visualization/src/camera/: CameraPath.js  FlyCamera.js
Visualization/src/components/: CPUHardCore.js  ContinualLearning.js  GPUSoftCore.js  InputTranslators.js  IntelligenceCommons.js  LLLVectorBus.js  OutputActionCores.js  SocketStandard.js  TensorFrame.js  UITestBench.js  VoltDB.js
Visualization/src/interaction/: FocusManager.js  InfoPanel.js  Raycaster.js
Visualization/src/scene/: Environment.js  SceneBuilder.js  SpatialLayout.js
Visualization/src/utils/: LODManager.js  MeshFactory.js  PerformanceMonitor.js  TextLabel.js
Working_Memory/: V2XA_Conversion.md  VOLT X — Master Blueprint.md  VOLT X — Roadmap.md
archive/: README.md
archive/code/volt-bus/: Cargo.toml
archive/code/volt-bus/benches/: algebra_bench.rs
archive/code/volt-bus/src/: batch.rs  codebook.rs  fft.rs  lib.rs  ops.rs
archive/code/volt-bus/tests/: algebra_test.rs  codebook_test.rs
archive/code/volt-core/: Cargo.toml
archive/code/volt-core/benches/: frame_bench.rs
archive/code/volt-core/src/: error.rs  frame.rs  lib.rs  meta.rs  module_info.rs  slot.rs
archive/code/volt-core/tests/: frame_operations_test.rs  serialization_test.rs
archive/code/volt-db/: Cargo.toml
archive/code/volt-db/src/: bloom.rs  compressed.rs  consolidation.rs  gc.rs  ghost.rs  gist.rs  hnsw_index.rs  lib.rs  store.rs  temporal.rs  tier0.rs  tier1.rs  tier2.rs  wal.rs
archive/code/volt-db/tests/: milestone_4_1_test.rs  milestone_4_2_test.rs  milestone_4_3_test.rs
archive/code/volt-hard/: Cargo.toml
archive/code/volt-hard/src/: certainty_engine.rs  code_runner.rs  hdc_algebra.rs  lib.rs  math_engine.rs  pipeline.rs  proof_constructor.rs  router.rs  strand.rs  weather_strand.rs
archive/code/volt-hard/tests/: integration.rs  milestone_6_1_test.rs
archive/code/volt-learn/: Cargo.toml
archive/code/volt-learn/src/: buffer.rs  calibration.rs  code_dataset.rs  code_pairs.rs  codebook_init.rs  codesearchnet.rs  contrastive.rs  distillation.rs  eval_dataset.rs  event.rs  forward_forward.rs  graduation.rs  kmeans.rs  lib.rs  logger.rs  reward.rs  rlvf.rs  role_labels.rs  self_play.rs  sleep.rs  stack_corpus.rs  stats.rs
archive/code/volt-learn/tests/: milestone_5_1_test.rs  milestone_5_2_test.rs  milestone_5_3_test.rs  phase_0_2_test.rs  phase_0_3_test.rs
archive/code/volt-ledger/: Cargo.toml
archive/code/volt-ledger/src/: lib.rs
archive/code/volt-safety/: Cargo.toml
archive/code/volt-safety/src/: axiom.rs  layer.rs  lib.rs  monitor.rs  scorer.rs  veto.rs
archive/code/volt-safety/tests/: safety_test.rs
archive/code/volt-server/: Cargo.toml
archive/code/volt-server/src/: lib.rs  main.rs  models.rs  registry.rs  routes.rs  state.rs
archive/code/volt-server/static/: app.js  index.html  style.css
archive/code/volt-server/tests/: milestone_6_1_test.rs  server_test.rs  streaming_test.rs
archive/code/volt-soft/: Cargo.toml
archive/code/volt-soft/benches/: rar_benchmark.rs
archive/code/volt-soft/src/: attention.rs  code_attention.rs  diffusion.rs  ghost_attention.rs  lib.rs  nn.rs  rar.rs  scaled_vfn.rs  vfn.rs
archive/code/volt-soft/src/gpu/: attention.rs  mod.rs  rar.rs  vfn.rs
archive/code/volt-soft/src/training/: flow_matching.rs  mod.rs  scaled_flow_matching.rs
archive/code/volt-soft/tests/: diffusion_test.rs  gpu_rar_test.rs  phase_0_4_test.rs  rar_test.rs  training_test.rs
archive/code/volt-translate/: Cargo.toml
archive/code/volt-translate/src/: action_core.rs  code_decoder.rs  code_encoder.rs  decode.rs  encode.rs  learned.rs  lib.rs  stub.rs
archive/code/volt-translate/src/llm/: backbone.rs  mod.rs  projection.rs  roles.rs  translator.rs
archive/code/volt-translate/tests/: llm_test.rs  roundtrip_test.rs
archive/config/: Cargo.toml  cargo_config.toml  training_config.toml
archive/docs/: ARCHITECTURE.md  DECISIONS.md  TRAINING.md  dev_history.md  svgs.md
archive/tools/: codebook_init.py  train_translator.py
