[workspace]
resolver = "2"
members = [
    "crates/volt-core",
    "crates/volt-bus",
    "crates/volt-soft",
    "crates/volt-hard",
    "crates/volt-db",
    "crates/volt-translate",
    "crates/volt-learn",
    "crates/volt-safety",
    "crates/volt-ledger",
    "crates/volt-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/volt-x/volt-x"

[workspace.dependencies]
# Shared dependencies across workspace
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-big-array = "0.5"
rkyv = "0.8"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
hnsw_rs = "0.3"
rand = "0.9"
rayon = "1.10"
rand_distr = "0.5"
candle-core = { version = "0.9", features = ["cuda"] }
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.20"
serde_plain = "1"
wasmtime = "29"
memmap2 = "0.9"
crc32fast = "1.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustyline = "15"

# Internal crate dependencies
volt-core = { path = "crates/volt-core" }
volt-bus = { path = "crates/volt-bus" }
volt-soft = { path = "crates/volt-soft" }
volt-hard = { path = "crates/volt-hard" }
volt-db = { path = "crates/volt-db" }
volt-translate = { path = "crates/volt-translate" }
volt-learn = { path = "crates/volt-learn" }
volt-safety = { path = "crates/volt-safety" }
volt-ledger = { path = "crates/volt-ledger" }
volt-server = { path = "crates/volt-server" }
