[package]
name = "volt-db"
version.workspace = true
edition.workspace = true

[dependencies]
volt-core = { workspace = true, features = ["serde"] }
volt-bus.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
hnsw_rs.workspace = true
memmap2.workspace = true
crc32fast.workspace = true

[dev-dependencies]
proptest.workspace = true
