[package]
name = "volt-hard"
version.workspace = true
edition.workspace = true

[features]
default = ["sandbox"]
sandbox = ["dep:wasmtime"]
weather = []

[dependencies]
volt-core.workspace = true
volt-bus.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
wasmtime = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
wasmtime.workspace = true
