[package]
name = "volt-soft"
version.workspace = true
edition.workspace = true

[dependencies]
volt-core.workspace = true
volt-bus.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_distr.workspace = true
crc32fast.workspace = true

# GPU-only dependencies (compiled only with `gpu` feature)
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }

[features]
default = []
gpu = ["dep:candle-core", "dep:candle-nn"]

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "rar_benchmark"
harness = false
